--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  color: var(--foreground);
+  color: #000000;
   background: var(--background);
   font-family: var(--poppins-font), Arial, Helvetica, sans-serif;
 }
